# komei-shimbun-ai-transcriptor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py
api/routers/: okoshi.py  ui.py
api/schemas/: params.py
api/static/: index.html
api/utils/: audio_utils.py  checkdata.py  preprocess.py  wisper_service.py
transcription_results/: transcription_20250619_060614_30ad4181-1b56-413d-9cc3-0b08f0b7553f.txt
