[tool.poetry]
name = "okoshi-api"
version = "0.1.0"
description = "fastapi開発キット"
authors = ["Komei Shimbun"]
packages = [{include = "okoshi-api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"