[tool.poetry]
name = "okoshi-api"
version = "0.1.0"
description = "fastapi開発キット"
authors = ["Komei Shimbun"]
packages = [{include = "okoshi-api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
pydub = "^0.25.1"
librosa = "^0.11.0"
soundfile = "^0.13.1"
openai = "^1.88.0"
aiofiles = "^24.1.0"
python-dotenv = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"